[gd_scene load_steps=9 format=3 uid="uid://c6exymw5iv2nn"]

[ext_resource type="Script" path="res://Scripts/settingsmenu.gd" id="1_anksp"]
[ext_resource type="Theme" uid="uid://bi3bwqv4kgpoq" path="res://Themes/BasicButton.tres" id="2_c2d4v"]
[ext_resource type="Shader" path="res://Scenes/mainmenu.gdshader" id="3_fo5xw"]
[ext_resource type="Theme" uid="uid://dw5g2qeyh1v1e" path="res://Themes/labeltheme.tres" id="4_0j0wd"]
[ext_resource type="AudioStream" uid="uid://b3huo5b0idfiy" path="res://Sound effects/Equatorial Complex.mp3" id="5_ogbeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjx0o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_xyh8k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ebs0"]
shader = ExtResource("3_fo5xw")
shader_parameter/height = 3.0
shader_parameter/frequency = 20.0
shader_parameter/speed = 3.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anksp")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 650.0
color = Color(0.509804, 0.639216, 1, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 357.0
offset_right = 266.0
offset_bottom = 557.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qjx0o")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 107.0
offset_top = 357.0
offset_right = 268.0
offset_bottom = 557.0
theme = SubResource("Theme_xyh8k")

[node name="Audio" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 89.0
offset_top = 368.0
offset_right = 289.0
offset_bottom = 411.0
theme = ExtResource("2_c2d4v")
text = "    Audio"
alignment = 0

[node name="Graphics" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 89.0
offset_top = 433.0
offset_right = 289.0
offset_bottom = 476.0
theme = ExtResource("2_c2d4v")
text = "    Graphics"
alignment = 0

[node name="Back" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 89.0
offset_top = 498.0
offset_right = 289.0
offset_bottom = 541.0
theme = ExtResource("2_c2d4v")
text = "    Back"
alignment = 0

[node name="GameTitle" type="Label" parent="."]
material = SubResource("ShaderMaterial_7ebs0")
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -238.0
offset_right = 1063.0
offset_bottom = -98.0
grow_vertical = 2
theme = ExtResource("4_0j0wd")
text = "Orbital Obliteration
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ogbeu")
autoplay = true

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 112.0
offset_top = 488.0
offset_right = 258.0
offset_bottom = 492.0
color = Color(0.501961, 0.501961, 0.501961, 1)

[connection signal="pressed" from="Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Audio" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="Graphics" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_quit_pressed"]
